# Autonomous_security_robot

./: .env  .gitignore  README.md  git_commiter.py
.github/workflows/: publish_ghcr.yaml
data/: face_embeddings_tester.npy
extras/: .dockerignore  amd64.Dockerfile  arm64.Dockerfile  compose.yaml  controllers.yaml  docker-bake.hcl  foxy.Dockerfile  foxy.compose.yaml  gazebo.launch.py  jetson.Dockerfile  onnxruntime.Dockerfile  rosTest.py  socketio_node.py  test.py
extras/getPercentage/: getPercentage.ino
extras/sketch_aug22a/: sketch_aug22a.ino
extras/ultrasonicSensor/: ultrasonicSensor.ino
src/diffdrive_arduino/: CMakeLists.txt  package.xml  plugins.xml
src/diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  diffdrive_arduino.h  fake_robot.h
src/diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp  fake_robot.cpp
src/robot_control/: package.xml  setup.py
src/robot_control/depricated++/: manual_control.py  mode_manager.py
src/robot_control/robot_control/: autonomous_control.py  manual_control.py  mode_manager.py  motor_driver.py
src/robot_vision/: setup.py
src/robot_vision/robot_vision/: alert_sub.py  camera_pub.py  face_rec.py
src/scuttle_description/: package.xml  setup.cfg  setup.py
src/scuttle_description/config/: controller.yaml  mapper_params_online_async.yaml  scuttle_cartographer.lua  ydlidar.yaml
src/scuttle_description/launch/: cartographer.launch.py  display.launch.py  gazebo.launch.py  launch_robot.launch.py  launch_sim.launch.py  navigation.launch.py  rsp.launch.py  ydlidar.launch.py
src/scuttle_description/maps/: my_map.pgm  my_map.yaml
src/scuttle_description/urdf/: gazebo_control.xacro  lidar.xacro  ros2_control.xacro  scuttle_core.xacro  scuttle_urdf.xacro
src/scuttle_description/worlds/: model.config  model.sdf  obstacles.world
src/ydlidar_ros2_driver-humble/config/: ydlidar_x4.yaml
utils/: common.py  git_commiter.py
